crates/iota-package-resolver/src/snapshots/iota_package_resolver__tests__signature_instantiation.snap
---
source: crates/iota-package-resolver/src/lib.rs
expression: "sig.instantiate(&[T::U64, T::Bool]).unwrap()"
---
Struct(
    StructTag {
        address: Address(
            "0x0000000000000000000000000000000000000000000000000000000000000002",
        ),
        module: Identifier(
            "table",
        ),
        name: Identifier(
            "Table",
        ),
        type_params: [
            Bool,
            Vector(
                Struct(
                    StructTag {
                        address: Address(
                            "0x0000000000000000000000000000000000000000000000000000000000000001",
                        ),
                        module: Identifier(
                            "option",
                        ),
                        name: Identifier(
                            "Option",
                        ),
                        type_params: [
                            U64,
                        ],
                    },
                ),
            ),
        ],
    },
)
