crates/iota-package-resolver/src/snapshots/iota_package_resolver__tests__structs.snap
---
source: crates/iota-package-resolver/src/lib.rs
expression: "format!(\"a0::m::T0: {t0:#?}\\n\\\n             a0::m::T1: {t1:#?}\\n\\\n             a0::m::T2: {t2:#?}\",)"
---
a0::m::T0: DataDef {
    defining_id: Address(
        "0x00000000000000000000000000000000000000000000000000000000000000a0",
    ),
    abilities: [],
    type_params: [],
    data: Struct(
        [
            (
                "b",
                Bool,
            ),
            (
                "v",
                Vector(
                    Datatype(
                        DatatypeRef {
                            package: Address(
                                "0x00000000000000000000000000000000000000000000000000000000000000a0",
                            ),
                            module: "m",
                            name: "T1",
                        },
                        [
                            Datatype(
                                DatatypeRef {
                                    package: Address(
                                        "0x00000000000000000000000000000000000000000000000000000000000000a0",
                                    ),
                                    module: "m",
                                    name: "T2",
                                },
                                [],
                            ),
                            U128,
                        ],
                    ),
                ),
            ),
        ],
    ),
}
a0::m::T1: DataDef {
    defining_id: Address(
        "0x00000000000000000000000000000000000000000000000000000000000000a0",
    ),
    abilities: [],
    type_params: [
        DatatypeTyParameter {
            constraints: [],
            is_phantom: false,
        },
        DatatypeTyParameter {
            constraints: [],
            is_phantom: false,
        },
    ],
    data: Struct(
        [
            (
                "a",
                Address,
            ),
            (
                "p",
                TypeParameter(
                    0,
                ),
            ),
            (
                "q",
                Vector(
                    TypeParameter(
                        1,
                    ),
                ),
            ),
        ],
    ),
}
a0::m::T2: DataDef {
    defining_id: Address(
        "0x00000000000000000000000000000000000000000000000000000000000000a0",
    ),
    abilities: [],
    type_params: [],
    data: Struct(
        [
            (
                "x",
                U8,
            ),
        ],
    ),
}
