crates/iota-package-resolver/src/snapshots/iota_package_resolver__tests__upgraded_package_enum.snap
---
source: crates/iota-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
enum 0xa1::n::E1 {
    V0 {
        t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
            a: address,
            p: struct 0xa1::m::T3 {
                y: u16,
            },
            q: vector<u32>,
        },
        u: struct 0xa1::m::T4 {
            z: u32,
        },
        et: enum 0xa0::m::E1<0xa1::m::E3, u32> {
            V {
                a: address,
                p: enum 0xa1::m::E3 {
                    V0 {
                        y: u16,
                    },
                },
                q: vector<u32>,
            },
        },
        eu: enum 0xa1::m::E4 {
            V0 {
                z: u32,
            },
        },
    },
}
