crates/iota-package-resolver/src/snapshots/iota_package_resolver__tests__value_nesting_boundary.snap
---
source: crates/iota-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
struct 0xa0::m::T1<u8, u8> {
    a: address,
    p: u8,
    q: vector<u8>,
}
